tdf#106218 sw: compare document: tweak special handling of EndOfContent

In case the last paragraph in the document is inserted or deleted, the
redline must not be positioned on the EndOfContent node (i#101009).

But then rejecting the redline will have an additional paragraph as
compared to the original document.  Try to avoid that by tweaking the
start position of the redline to the end of the previous paragraph.

(regression from f4609c4c294a62023b6cd6baeb6a73d44992dec3)

Change-Id: Iae75042a3124d0f3bca955fb856c94a6f478b986